@@ -212,7 +212,7 @@ public final class ModelLoader extends ModelBakery
         List<Block> blocks = StreamSupport.stream(Block.REGISTRY.spliterator(), false)
                 .filter(block -> block.getRegistryName() != null)
                 .sorted(Comparator.comparing(b -> b.getRegistryName().toString()))
-                .collect(Collectors.toList());
+                .toList();
         ProgressBar blockBar = ProgressManager.push("ModelLoader: blocks", blocks.size(), false, LoadingTracker.Phase.RELOAD_BLOCKS);
 
         BlockStateMapper mapper = this.blockModelShapes.getBlockStateMapper();
@@ -281,7 +281,7 @@ public final class ModelLoader extends ModelBakery
         List<Item> items = StreamSupport.stream(Item.REGISTRY.spliterator(), false)
                 .filter(item -> item.getRegistryName() != null)
                 .sorted(Comparator.comparing(i -> i.getRegistryName().toString()))
-                .collect(Collectors.toList());
+                .toList();
 
         ProgressBar itemBar = ProgressManager.push("ModelLoader: items", items.size(), false, LoadingTracker.Phase.RELOAD_ITEMS);
         for(Item item : items)
@@ -493,9 +493,8 @@ public final class ModelLoader extends ModelBakery
                 @Override
                 public List<BakedQuad> getQuads(@Nullable IBlockState state, @Nullable EnumFacing side, long rand)
                 {
-                    if(state instanceof IExtendedBlockState)
+                    if(state instanceof IExtendedBlockState exState)
                     {
-                        IExtendedBlockState exState = (IExtendedBlockState)state;
                         if(exState.getUnlistedNames().contains(Properties.AnimationProperty))
                         {
                             IModelState newState = exState.getValue(Properties.AnimationProperty);
@@ -676,7 +675,7 @@ public final class ModelLoader extends ModelBakery
                 builder.add(Pair.of(model, new ModelStateComposition(v.getState(), modelDefaultState)));
             }
 
-            if (models.size() == 0) //If all variants are missing, add one with the missing model and default rotation.
+            if (models.isEmpty()) //If all variants are missing, add one with the missing model and default rotation.
             {
                 // FIXME: log this?
                 IModel missing = ModelLoaderRegistry.getMissingModel();
@@ -717,7 +716,7 @@ public final class ModelLoader extends ModelBakery
             }
             if(variants.size() == 1)
             {
-                IModel model = models.get(0);
+                IModel model = models.getFirst();
                 return model.bake(MultiModelState.getPartState(state, model, 0), format, bakedTextureGetter);
             }
             WeightedBakedModel.Builder builder = new WeightedBakedModel.Builder();
@@ -758,7 +757,7 @@ public final class ModelLoader extends ModelBakery
         }
     }
 
-    protected IModel getMissingModel()
+    IModel getMissingModel()
     {
         if (missingModel == null)
         {
@@ -962,9 +961,8 @@ public final class ModelLoader extends ModelBakery
         for(Map.Entry<ResourceLocation, Exception> entry : loadingExceptions.entrySet())
         {
             // ignoring pure ResourceLocation arguments, all things we care about pass ModelResourceLocation
-            if(entry.getKey() instanceof ModelResourceLocation)
+            if(entry.getKey() instanceof ModelResourceLocation location)
             {
-                ModelResourceLocation location = (ModelResourceLocation)entry.getKey();
                 IBakedModel model = modelRegistry.getObject(location);
                 if(model == null || model == missingModel || model instanceof FancyMissingModel.BakedModel)
                 {
@@ -1003,9 +1001,8 @@ public final class ModelLoader extends ModelBakery
                                 }
                             }
                         }
-                        if(entry.getValue() instanceof ItemLoadingException)
+                        if(entry.getValue() instanceof ItemLoadingException ex)
                         {
-                            ItemLoadingException ex = (ItemLoadingException)entry.getValue();
                             FMLLog.log.error("{}, normal location exception: ", errorMsg, ex.normalException);
                             FMLLog.log.error("{}, blockstate location exception: ", errorMsg, ex.blockstateException);
                         }
@@ -1237,8 +1234,7 @@ public final class ModelLoader extends ModelBakery
                 builder.putModel(selector.getPredicate(multipart.getStateContainer()), partModels.get(selector).bake(partModels.get(selector).getDefaultState(), format, bakedTextureGetter));
             }
 
-            IBakedModel bakedModel = builder.makeMultipartModel();
-            return bakedModel;
+            return builder.makeMultipartModel();
         }
 
         @Override
